NetBSD Problem Report #45874

From hf@spg.tu-darmstadt.de  Thu Jan 26 17:56:43 2012
Return-Path: <hf@spg.tu-darmstadt.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 8588563B955
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 26 Jan 2012 17:56:43 +0000 (UTC)
Message-Id: <201201261027.q0QARjb4003154@Gstoder.nt.e-technik.tu-darmstadt.de>
Date: Thu, 26 Jan 2012 11:27:45 +0100 (CET)
From: Hauke Fath <hauke@Espresso.Rhein-Neckar.DE>
Reply-To: Hauke Fath <hauke@Espresso.Rhein-Neckar.DE>
To: gnats-bugs@gnats.NetBSD.org
Cc: Hauke Fath <hauke@Espresso.Rhein-Neckar.DE>
Subject: xi(4) autoconfig panics 
X-Send-Pr-Version: 3.95

>Number:         45874
>Category:       kern
>Synopsis:       xi(4) autoconfig panics
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 26 18:00:00 +0000 2012
>Closed-Date:    Tue Feb 14 13:53:11 +0000 2012
>Last-Modified:  Tue Feb 14 13:55:01 +0000 2012
>Originator:     Hauke Fath
>Release:        NetBSD 5.99.60
>Organization:
-- 
     The ASCII Ribbon Campaign                    Hauke Fath
()     No HTML/RTF in email	        Institut für Nachrichtentechnik
/\     No Word docs in email                     TU Darmstadt
     Respect for open standards              Ruf +49-6151-16-3281
>Environment:


System: NetBSD 5.99.60 (MONOLITHIC) #0: Wed Jan 25 14:18:36 CET 2012
        hf@Hochstuhl:/var/obj/netbsd-builds/developer/i386/sys/arch/i386/compile
Architecture: i386
Machine: i386
>Description:

	The xi(4) driver for the Xircom pcmcia ethernet adapter
	("Intel PRO/100 PC Card" here) panics during
	auto-configuration.

	The card works fine on netbsd-5.


Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 5.99.60 (MONOLITHIC) #0: Wed Jan 25 14:18:36 CET 2012
	hf@Hochstuhl:/var/obj/netbsd-builds/developer/i386/sys/arch/i386/compile/MONOLITHIC
total memory = 81532 KB
avail memory = 66532 KB
mainbus0 (root)
acpi_probe: failed to initialize tables
cpu0 at mainbus0: Intel 586-class, 152MHz, id 0x52c
pci0 at mainbus0 bus 0: configuration mode 1
pchb0 at pci0 dev 0 function 0: vendor 0x8086 product 0x1235 (rev. 0x02)
pcib0 at pci0 dev 1 function 0: vendor 0x8086 product 0x1234 (rev. 0x03)
vga1 at pci0 dev 3 function 0: vendor 0x10c8 product 0x0003 (rev. 0x02)
wsdisplay0 at vga1 kbdmux 1
drm at vga1 not configured
pcic has not been converted to device_t
pcic0 at pci0 dev 19 function 0: Cirrus Logic PD6729 PCMCIA controller
pcic0: controller 0 (Cirrus PD6710/2X) has sockets A and B
isa0 at pcib0
lpt2 at isa0 port 0x3bc-0x3bf irq : polled
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
com0: console
pckbc0 at isa0 port 0x60-0x64
pckbd0 at pckbc0 (kbd slot)
pckbc0: using irq 1 for kbd slot
wskbd0 at pckbd0 mux 1
pms0 at pckbc0 (aux slot)
pckbc0: using irq 12 for aux slot
wsmouse0 at pms0 mux 0
attimer0 at isa0 port 0x40-0x43
wdc0 at isa0 port 0x1f0-0x1f7 irq 14
atabus0 at wdc0 channel 0
sb0 at isa0 port 0x220-0x237 irq 5 drq 1: dsp v3.02
audio0 at sb0: half duplex, playback, capture, mmap, independent
midi0 at sb0: SB MIDI UART
opl0 at sb0: model OPL3
midi1 at opl0: SB Yamaha OPL3
wss0 at isa0 port 0x530-0x537 irq 10 drq 0,1: CS4236B
audio1 at wss0: full duplex, playback, capture, mmap
pcppi0 at isa0 port 0x61
midi2 at pcppi0: PC speaker
sysbeep0 at pcppi0
isapnp0 at isa0 port 0x279
npx0 at isa0 port 0xf0-0xff
fdc0 at isa0 port 0x3f0-0x3f7 irq 6 drq 2
attimer0: attached to pcppi0
pcmcia0 at pcic0 controller 0 socket 0
pcmcia1 at pcic0 controller 0 socket 1
pcic0: using irq 3 for socket events
pcic0: WARNING: powerhook_establish is deprecated
pcic0: WARNING: powerhook_establish is deprecated
fd0 at fdc0 drive 0: 1.44MB, 80 cyl, 2 head, 18 sec
atapibus0 at atabus0: 2 targets
cd0 at atapibus0 drive 1: <CD-38E, , 2.0A> cdrom removable
wd0 at atabus0 drive 0
wd0: <IC25N040ATCS05-0>
wd0: 38154 MB, 77520 cyl, 16 head, 63 sec, 512 bytes/sect x 78140160 sectors
xirc0 at pcmcia1 function 0: <Intel, EtherExpress(TM) PRO/100 PC Card Mobile Adapter16, PRO/100 M16A, 1.00>
xirc0: id=0143
pcic0: port 0x300-0x30f
pcmcia1: card irq 7
xi has not been converted to device_t
xi0 at xirc0
fatal privileged instruction fault in supervisor mode
trap type 0 code 0 eip c055db28 cs 8 eflags 10246 cr2 0 ilevel 8
kernel: supervisor trap privileged instruction fault, code=0
Stopped in pid 0.28 (system) at netbsd:mi_switch:       pushl   %ebp
db{0}> t
mi_switch(c727f7e0,32,c7f89a2c,c726fd40,2,0,c726db00,c04a8b92,c726fd40,32) at netbsd:mi_switch
sleepq_block(32,0,c0bb56a6,32,0,c112c008,0,0,c0c17205,5) at netbsd:sleepq_block+0xa3
xi_full_reset(c7f97800,c0e78000,d1000,400,2,1000,1,c7f97800,c7f97800,c7256b9c) at netbsd:xi_full_reset+0x16d
xi_attach(c7f97800,c7f89ada,c7f89ada,c0917a33,c7f97800,a000aa01,7ab7bcc9,61e4090e,c7f9761c,c09254a4) at netbsd:xi_attach+0x17
xi_xirc_attach(c7f97600,c7f97800,c0b6aa01,0,c0b6aa01,c112c3c4,c112c3c8,c067e6ba,c76a87a8,c112c380) at netbsd:xi_xirc_attach+0x9b
config_attach_loc(c7f97600,c0c2efe8,0,c0b6aa01,c09254a4,0,c727de3c,c7256b9c,c7256b9c,c7f97600) at netbsd:config_attach_loc+0x176
config_found(c7f97600,c0b6aa01,c09254a4,c7256bec,c7f97600,c7f89c50,1,c7f89c50,0,c7f89c50) at netbsd:config_found+0x37
xirc_attach(c7757200,c7f97600,c7f89c50,c7f89c60,c7f89c50,0,0,0,0,0) at netbsd:xirc_attach+0x263
config_attach_loc(c7757200,c0c2efd0,c7f89c60,c7f89c50,c067deab,c079f89e,0,0,0,0) at netbsd:config_attach_loc+0x176
pcmcia_rescan(c7757200,c0b6b0d1,c0b2d9cc,c726fd40,0,0,c726ee80,c76a87a8,c110f880,c76a86d8) at netbsd:pcmcia_rescan+0xae
pcmcia_card_attach(c7757200,c7f89cf8,c068d166,c76a87a8,c110f880,c76a87a8,c7f89d2c,c036bdd2,c76a87a8,0) at netbsd:pcmcia_card_attach+0x9f
pcic_attach_card(c76a87a8,0,c0b9ba15,19,0,c7f89cf8,c727f7e0,c727fa80,c727f7e0,c7f89d28) at netbsd:pcic_attach_card+0x3e
pcic_event_thread(c76a87a8,e3e000,e47000,0,c0100307,0,0,0,0,0) at netbsd:pcic_event_thread+0x122
db{0}> 

>How-To-Repeat:

	Boot NetBSD on an i386 notebook (Thinkpad 380D here) with a
	xi(4) network card.

>Fix:
	Yes, please.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: drochner@NetBSD.org
State-Changed-When: Tue, 14 Feb 2012 13:53:11 +0000
State-Changed-Why:
fixed by xirc.c rev.1.33


From: "Matthias Drochner" <drochner@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45874 CVS commit: src/sys/dev/pcmcia
Date: Tue, 14 Feb 2012 13:51:20 +0000

 Module Name:	src
 Committed By:	drochner
 Date:		Tue Feb 14 13:51:20 UTC 2012

 Modified Files:
 	src/sys/dev/pcmcia: xirc.c

 Log Message:
 fix incomplete device_t/softc split which led to crash on attachment,
 closes PR kern/45874 by Hauke Fath
 approved by releng


 To generate a diff of this commit:
 cvs rdiff -u -r1.32 -r1.33 src/sys/dev/pcmcia/xirc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.