fix incomplete device_t/softc split which led to crash on attachment, closes PR kern/45874 by Hauke Fath approved by releng